Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33325

Extension Store's details do not scale images according to page width

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 18.0.0
    • Qt Creator 17.0.0
    • All Other Issues
    • None
    • 03bf04010 (master)

      When adding images and screencasts to a Qt Creator plugin / extension, the details markdown rendering doesn't scale the images according to the view size / page width.

      Note that Qt Creator's image view has no issues scaling down such images.

      I think it would help with the readability of the extensions when the images are properly scaled down.

       

        1. qt-creator-manage-extensions.png
          513 kB
          Cristian Adam
        2. qt-creator-image-view-zoom.png
          514 kB
          Cristian Adam
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes