Utils: Scale Markdown Images to fit viewport

Fixes: QTCREATORBUG-33325
Change-Id: I0b566bd10be9df37315112e4a2a1b068f3bb029f
Reviewed-by: Cristian Adam <cristian.adam@qt.io>